Models and localization

--- a/EducationCenterUoW.Data/EducationCenterUoW.Data.csproj
+++ b/EducationCenterUoW.Data/EducationCenterUoW.Data.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="IRepositories\" />
+    <Folder Include="Contexts\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
