--- a/EducationCenterUoW.Service/EducationCenterUoW.Service.csproj
+++ b/EducationCenterUoW.Service/EducationCenterUoW.Service.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
