--- a/EducationCenterUoW.Data/EducationCenterUoW.Data.csproj
+++ b/EducationCenterUoW.Data/EducationCenterUoW.Data.csproj
@@ -5,9 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="IRepositories\" />
-    <Folder Include="Contexts\" />
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkcore.SqlServer" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkcore.Tools" Version="5.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EducationCenterUoW.Domain\EducationCenterUoW.Domain.csproj" />
   </ItemGroup>
 
 </Project>
