--- a/EducationCenterUoW.Api/EducationCenterUoW.Api.csproj
+++ b/EducationCenterUoW.Api/EducationCenterUoW.Api.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\EducationCenterUoW.Service\EducationCenterUoW.Service.csproj" />
   </ItemGroup>
 
 </Project>
