--- a/EducationCenterUoW.Api/EducationCenterUoW.Api.csproj
+++ b/EducationCenterUoW.Api/EducationCenterUoW.Api.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.13" />
-    <PackageReference Include="Microsoft.EntityFrameworkcore.DEsign" Version="5.0.15">
+    <PackageReference Include="Microsoft.EntityFrameworkcore.Design" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
