--- a/EducationCenterUoW.Data/EducationCenterUoW.Data.csproj
+++ b/EducationCenterUoW.Data/EducationCenterUoW.Data.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkcore.SqlServer" Version="5.0.15" />
-    <PackageReference Include="Microsoft.EntityFrameworkcore.Tools" Version="5.0.15">
+    <PackageReference Include="Npgsql.EntityFrameworkcore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkcore.Tools" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
