--- a/EducationCenterUoW.Api/appsettings.json
+++ b/EducationCenterUoW.Api/appsettings.json
@@ -12,5 +12,8 @@
   },
   "Serilog": {
     "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Properties} {Message}"
+  },
+  "Storage": {
+    "ImageUrl": "Images"
   }
 }
