--- a/EducationCenterUoW.Api/appsettings.json
+++ b/EducationCenterUoW.Api/appsettings.json
@@ -15,5 +15,11 @@
   },
   "Storage": {
     "ImageUrl": "Images"
+  },
+  "Authentication": {
+    "Basic": {
+      "Username": "admin",
+      "Password": "12345"
+    }
   }
 }
